@@ -4,6 +4,12 @@ import com.skax.physicalrisk.dto.request.site.CreateSiteRequest;
 import com.skax.physicalrisk.dto.request.site.UpdateSiteRequest;
 import com.skax.physicalrisk.dto.response.site.SiteResponse;
 import com.skax.physicalrisk.service.site.SiteService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -31,29 +37,40 @@ public class SiteController {
 	private final SiteService siteService;
 
 	/**
-	 * 사업장 조회 (이름 검색 또는 전체 조회)
+	 * 특정 사업장 조회 (이름으로 검색)
 	 *
-	 * GET /api/site?siteName={siteName} - 특정 사업장 조회 (이름으로 검색)
-	 * GET /api/site - 전체 사업장 조회 (siteName 파라미터 없을 때)
+	 * GET /api/site?siteName={siteName}
 	 *
-	 * @param siteName 사업장명 (optional, 제공 시 해당 이름으로 검색)
-	 * @return 사업장 정보 또는 목록
+	 * @param siteName 사업장명 (필수)
+	 * @return 사업장 정보
 	 * @throws UnauthorizedException 인증되지 않은 사용자인 경우 (401)
 	 * @throws ResourceNotFoundException 사업장을 찾을 수 없는 경우 (404)
 	 */
+	@Operation(
+		summary = "특정 사업장 조회",
+		description = "사업장 이름으로 특정 사업장의 정보를 조회합니다."
+	)
+	@ApiResponse(
+		responseCode = "200",
+		description = "사업장 정보 반환",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = SiteResponse.SiteInfo.class),
+			examples = @ExampleObject(
+				value = "{\"siteId\": \"3fa85f64-5717-4562-b3fc-2c963f66afa6\", \"siteName\": \"sk u 타워\", \"latitude\": 37.36633726, \"longitude\": 127.10661717, \"jibunAddress\": \"경기도 성남시 분당구 정자동 25-1\", \"roadAddress\": \"경기도 성남시 분당구 성남대로343번길 9\", \"siteType\": \"data_center\"}"
+			)
+		)
+	)
+	@ApiResponse(responseCode = "401", description = "인증되지 않은 사용자")
+	@ApiResponse(responseCode = "404", description = "사업장을 찾을 수 없음")
 	@GetMapping
-	public ResponseEntity<?> getSites(@RequestParam(required = false) String siteName) {
-		if (siteName != null && !siteName.isEmpty()) {
-			// 이름으로 검색
-			log.info("GET /api/site?siteName={} - Searching site by name", siteName);
-			SiteResponse.SiteInfo response = siteService.getSiteByName(siteName);
-			return ResponseEntity.ok(response);
-		} else {
-			// 전체 조회
-			log.info("GET /api/site - Fetching all sites");
-			SiteResponse response = siteService.getSites();
-			return ResponseEntity.ok(response);
-		}
+	public ResponseEntity<SiteResponse.SiteInfo> getSite(
+		@Parameter(description = "사업장명", required = true, example = "sk u 타워")
+		@RequestParam String siteName
+	) {
+		log.info("GET /api/site?siteName={} - Searching site by name", siteName);
+		SiteResponse.SiteInfo response = siteService.getSiteByName(siteName);
+		return ResponseEntity.ok(response);
 	}
 
 	/**
@@ -64,6 +81,34 @@ public class SiteController {
 	 * @throws UnauthorizedException 인증되지 않은 사용자인 경우 (401)
 	 * @throws ValidationException 사업장 데이터가 유효하지 않은 경우 (422)
 	 */
+	@Operation(
+		summary = "사업장 등록",
+		description = "사업장 등록하는 엔드포인트."
+	)
+	@io.swagger.v3.oas.annotations.parameters.RequestBody(
+		description = "사업장 정보",
+		required = true,
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = CreateSiteRequest.class),
+			examples = @ExampleObject(
+				value = "{\"name\": \"sk u타워\", \"latitude\": 37.36633726, \"longitude\": 127.10661717, \"jibunAddress\": \"경기도 성남시 분당구 정자동 25-1\", \"roadAddress\": \"경기도 성남시 분당구 성남대로343번길 9\", \"type\": \"office\"}"
+			)
+		)
+	)
+	@ApiResponse(
+		responseCode = "200",
+		description = "사업장 등록 결과",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = SiteResponse.SiteInfo.class),
+			examples = @ExampleObject(
+				value = "{\"siteId\": \"3fa85f64-5717-4562-b3fc-2c963f66afa6\", \"siteName\": \"서울 본사\", \"latitude\": 37.36633726, \"longitude\": 127.10661717, \"jibunAddress\": \"경기도 성남시 분당구 정자동 25-1\", \"roadAddress\": \"경기도 성남시 분당구 성남대로343번길 9\", \"siteType\": \"공장\"}"
+			)
+		)
+	)
+	@ApiResponse(responseCode = "401", description = "인증되지 않은 사용자")
+	@ApiResponse(responseCode = "422", description = "사업장 데이터가 유효하지 않음")
 	@PostMapping
 	public ResponseEntity<SiteResponse.SiteInfo> createSite(@Valid @RequestBody CreateSiteRequest request) {
 		log.info("POST /api/sites - Name: {}", request.getName());
@@ -81,8 +126,38 @@ public class SiteController {
 	 * @throws ResourceNotFoundException 사업장을 찾을 수 없는 경우 (404)
 	 * @throws ValidationException 사업장 데이터가 유효하지 않은 경우 (422)
 	 */
+	@Operation(
+		summary = "사업장 수정",
+		description = "특정 사업장 정보를 수정하는 엔드포인트."
+	)
+	@io.swagger.v3.oas.annotations.parameters.RequestBody(
+		description = "수정할 사업장 정보",
+		required = true,
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = UpdateSiteRequest.class),
+			examples = @ExampleObject(
+				value = "{\"name\": \"sk u타워\", \"latitude\": 37.36633726, \"longitude\": 127.10661717, \"jibunAddress\": \"경기도 성남시 분당구 정자동 25-1\", \"roadAddress\": \"경기도 성남시 분당구 성남대로343번길 9\", \"type\": \"data_center\"}"
+			)
+		)
+	)
+	@ApiResponse(
+		responseCode = "200",
+		description = "수정된 사업장 정보 반환",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = SiteResponse.SiteInfo.class),
+			examples = @ExampleObject(
+				value = "{\"siteId\": \"3fa85f64-5717-4562-b3fc-2c963f66afa6\", \"name\": \"sk u타워\", \"latitude\": 37.36633726, \"longitude\": 127.10661717, \"jibunAddress\": \"경기도 성남시 분당구 정자동 25-1\", \"roadAddress\": \"경기도 성남시 분당구 성남대로343번길 9\", \"type\": \"data_center\"}"
+			)
+		)
+	)
+	@ApiResponse(responseCode = "401", description = "인증되지 않은 사용자")
+	@ApiResponse(responseCode = "404", description = "사업장을 찾을 수 없음")
+	@ApiResponse(responseCode = "422", description = "사업장 데이터가 유효하지 않음")
 	@PatchMapping
 	public ResponseEntity<SiteResponse.SiteInfo> updateSite(
+		@Parameter(description = "사업장 ID", required = true, example = "3fa85f64-5717-4562-b3fc-2c963f66afa6")
 		@RequestParam UUID siteId,
 		@RequestBody UpdateSiteRequest request
 	) {
@@ -99,10 +174,28 @@ public class SiteController {
 	 * @throws UnauthorizedException 인증되지 않은 사용자인 경우 (401)
 	 * @throws ResourceNotFoundException 사업장을 찾을 수 없는 경우 (404)
 	 */
+	@Operation(
+		summary = "사업장 삭제",
+		description = "특정 사업장을 삭제하는 엔드포인트."
+	)
+	@ApiResponse(
+		responseCode = "200",
+		description = "사업장 삭제 처리 결과 반환",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = Map.class),
+			examples = @ExampleObject(value = "{}")
+		)
+	)
+	@ApiResponse(responseCode = "401", description = "인증되지 않은 사용자")
+	@ApiResponse(responseCode = "404", description = "사업장을 찾을 수 없음")
 	@DeleteMapping
-	public ResponseEntity<Map<String, String>> deleteSite(@RequestParam UUID siteId) {
+	public ResponseEntity<Map<String, Object>> deleteSite(
+		@Parameter(description = "사업장 ID", required = true, example = "3fa85f64-5717-4562-b3fc-2c963f66afa6")
+		@RequestParam UUID siteId
+	) {
 		log.info("DELETE /api/sites?siteId={} - Deleting site", siteId);
 		siteService.deleteSite(siteId);
-		return ResponseEntity.ok(Map.of("message", "사업장이 삭제되었습니다"));
+		return ResponseEntity.ok(java.util.Collections.emptyMap());
 	}
 }
