@@ -3,6 +3,11 @@ package com.skax.physicalrisk.controller;
 import com.skax.physicalrisk.dto.request.user.UpdateUserRequest;
 import com.skax.physicalrisk.dto.response.user.UserResponse;
 import com.skax.physicalrisk.service.user.UserService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
@@ -31,6 +36,22 @@ public class UserController {
 	 *
 	 * @return 사용자 정보
 	 */
+	@Operation(
+		summary = "사용자 정보 조회",
+		description = "사용자 페이지에서 사용할 현재 로그인 사용자 정보 조회."
+	)
+	@ApiResponse(
+		responseCode = "200",
+		description = "사용자 정보",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = UserResponse.class),
+			examples = @ExampleObject(
+				value = "{\"email\": \"user@example.com\", \"name\": \"홍길동\", \"language\": \"ko\"}"
+			)
+		)
+	)
+	@ApiResponse(responseCode = "401", description = "인증되지 않은 사용자")
 	@GetMapping("/me")
 	public ResponseEntity<UserResponse> getCurrentUser() {
 		log.info("GET /api/users/me - Fetching current user");
@@ -44,6 +65,33 @@ public class UserController {
 	 * @param request 수정 요청
 	 * @return 수정된 사용자 정보
 	 */
+	@Operation(
+		summary = "사용자 정보 수정",
+		description = "사용자 정보 중 언어 정보를 수정한다."
+	)
+	@io.swagger.v3.oas.annotations.parameters.RequestBody(
+		description = "수정할 사용자 정보",
+		required = true,
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = UpdateUserRequest.class),
+			examples = @ExampleObject(
+				value = "{\"language\": \"ko\"}"
+			)
+		)
+	)
+	@ApiResponse(
+		responseCode = "200",
+		description = "수정된 사용자 정보",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = UserResponse.class),
+			examples = @ExampleObject(
+				value = "{\"email\": \"user@example.com\", \"name\": \"홍길동\", \"language\": \"ko\"}"
+			)
+		)
+	)
+	@ApiResponse(responseCode = "401", description = "인증되지 않은 사용자")
 	@PatchMapping("/me")
 	public ResponseEntity<UserResponse> updateUser(@RequestBody UpdateUserRequest request) {
 		log.info("PATCH /api/users/me - Updating user");
@@ -56,21 +104,24 @@ public class UserController {
 	 *
 	 * @return 성공 메시지
 	 */
+	@Operation(
+		summary = "계정 삭제",
+		description = "계정을 삭제하는 엔드포인트."
+	)
+	@ApiResponse(
+		responseCode = "200",
+		description = "계정 삭제 결과 반환",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = Map.class),
+			examples = @ExampleObject(value = "{}")
+		)
+	)
+	@ApiResponse(responseCode = "401", description = "인증되지 않은 사용자")
 	@DeleteMapping("/me")
-	public ResponseEntity<Map<String, String>> deleteUser() {
+	public ResponseEntity<Map<String, Object>> deleteUser() {
 		log.info("DELETE /api/users/me - Deleting user");
 		userService.deleteUser();
-		return ResponseEntity.ok(Map.of("message", "사용자가 삭제되었습니다"));
-	}
-
-	/**
-	 * 비밀번호 변경 (미구현)
-	 *
-	 * @return 성공 메시지
-	 */
-	@PatchMapping("/me/password")
-	public ResponseEntity<Map<String, String>> changePassword() {
-		log.info("PATCH /api/users/me/password - Not implemented yet");
-		return ResponseEntity.ok(Map.of("message", "Not implemented yet"));
+		return ResponseEntity.ok(java.util.Collections.emptyMap());
 	}
 }
